Cambio en Clases

--- a/app/src/main/res/layout/fragment_menu_configuracion.xml
+++ b/app/src/main/res/layout/fragment_menu_configuracion.xml
@@ -2,6 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:id="@+id/Menu_configuracion"
     tools:context="com.example.miguelangel.savenergy.Menu_configuracion">
 
     <LinearLayout
@@ -32,6 +33,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="8dp"
+            android:onClick=""
             android:text="Cambiar Contraseña" />
 
 
