--- a/app/src/main/res/layout/fragment_configuracion__perfil.xml
+++ b/app/src/main/res/layout/fragment_configuracion__perfil.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:id="@+id/Configuracion_Perfil"
     tools:context="com.example.miguelangel.savenergy.Configuracion_Perfil">
 
 
