--- a/app/src/main/res/layout/activity_inicio.xml
+++ b/app/src/main/res/layout/activity_inicio.xml
@@ -42,8 +42,10 @@
                             android:id="@+id/imageView2"
                             android:layout_width="57dp"
                             android:layout_height="44dp"
-                            android:src="@drawable/logo"
+                            android:layout_gravity="top|bottom|left|right|center_horizontal|center"
                             android:layout_margin="0dp"
+                            android:layout_marginTop="10dp"
+                            android:src="@drawable/logo"
                             tools:ignore="MissingConstraints"
                             tools:layout_editor_absoluteX="110dp"
                             tools:layout_editor_absoluteY="16dp" />
