--- a/app/src/main/res/layout/activity_inicio__sesion.xml
+++ b/app/src/main/res/layout/activity_inicio__sesion.xml
@@ -49,7 +49,7 @@
                 tools:layout_editor_absoluteY="138dp">
 
                 <TextView
-                    android:id="@+id/usuario"
+                    android:id="@+id/correo_e"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="15dp"
@@ -75,8 +75,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:ems="10"
-                    android:inputType="textPassword"
-                    android:text="Contraseña" />
+                    android:hint="************"
+                    android:inputType="textPassword" />
 
                 <TextView
                     android:id="@+id/olvido"
