--- a/app/src/main/res/layout/activity_registrarse.xml
+++ b/app/src/main/res/layout/activity_registrarse.xml
@@ -39,13 +39,14 @@
             </LinearLayout>
 
             <TextView
-                android:id="@+id/nombre"
+                android:id="@+id/clave_txt"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="15dp"
-                android:text="Nombre" />
+                android:text="Clave de producto" />
 
             <EditText
+                android:id="@+id/clave"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:ems="10"
@@ -53,7 +54,7 @@
                 android:text="" />
 
             <TextView
-                android:id="@+id/usuario"
+                android:id="@+id/email"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="15dp"
@@ -79,8 +80,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:ems="10"
-                android:inputType="textPassword"
-                android:text="Contraseña" />
+                android:hint="************"
+                android:inputType="textPassword" />
 
             <TextView
                 android:id="@+id/password_txt_2"
@@ -94,8 +95,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:ems="10"
-                android:inputType="textPassword"
-                android:text="Contraseña" />
+                android:hint="************"
+                android:inputType="textPassword" />
 
             <Button
                 android:id="@+id/registrarse"
