--- a/app/src/main/res/layout/activity_inicio.xml
+++ b/app/src/main/res/layout/activity_inicio.xml
@@ -20,6 +20,7 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:padding="8dp"
                     android:orientation="vertical"
                     android:background="#076a31">
 
@@ -99,7 +100,9 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="16dp"
-                        android:text="Registrate" />
+                        android:textColor="@color/buttonText"
+                        android:theme="@style/Button_style"
+                        android:text="@string/registrarse" />
 
                     <TextView
                         android:layout_width="wrap_content"
@@ -114,7 +117,17 @@
                         android:id="@+id/inicio_sesion"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="Inicia Sesión" />
+                        android:textColor="@color/buttonText"
+                        android:theme="@style/Button_style"
+                        android:text="@string/inicia_sesion" />
+
+                    <Button
+                        android:id="@+id/tarifas"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:textColor="@color/buttonText"
+                        android:theme="@style/Button_style"
+                        android:text="Tarifas" />
                 </LinearLayout>
             </LinearLayout>
     </ScrollView>
