--- a/app/src/main/res/layout/fragment_bienvenido.xml
+++ b/app/src/main/res/layout/fragment_bienvenido.xml
@@ -85,7 +85,7 @@
                     android:text="Consumo de" />
 
                 <Spinner
-                    android:id="@+id/spfecha"
+                    android:id="@+id/sp_fecha"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1" />
