--- a/app/src/main/res/layout/content_principal.xml
+++ b/app/src/main/res/layout/content_principal.xml
@@ -70,12 +70,12 @@
 
                 </LinearLayout>
 
-                <com.github.mikephil.charting.charts.BarChart
+                <!--<com.github.mikephil.charting.charts.BarChart
                     android:id="@+id/grafica"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"/>
-
+                    -->
             </LinearLayout>
             <LinearLayout
                 android:layout_width="match_parent"
@@ -156,37 +156,39 @@
                     android:text="Energía Electrica Sustentable" />
             </LinearLayout>
 
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:orientation="horizontal"
+                android:padding="8dp">
+
+                <ImageView
+                    android:layout_width="60dp"
+                    android:layout_height="60dp"
+                    android:src="@drawable/ss_2" />
+
+                <EditText
+                    android:id="@+id/tv_consumo_e_s"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="15dp"
+                    android:inputType="textPersonName"
+                    android:text="25"
+                    android:textColor="#000" />
+
+                <TextView
+                    android:id="@+id/txt_kwh_s"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="kWh"
+                    android:textColor="#000"
+                    android:textSize="18sp" />
+            </LinearLayout>
+
         </LinearLayout>
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            android:orientation="horizontal"
-            android:padding="8dp">
 
-            <ImageView
-                android:layout_width="60dp"
-                android:layout_height="60dp"
-                android:src="@drawable/ss_2" />
-
-            <EditText
-                android:id="@+id/tv_consumo_e_s"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="15dp"
-                android:inputType="textPersonName"
-                android:text="25"
-                android:textColor="#000" />
-
-            <TextView
-                android:id="@+id/txt_kwh_s"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="kWh"
-                android:textColor="#000"
-                android:textSize="18sp" />
-        </LinearLayout>
     </ScrollView>
 
 </android.support.constraint.ConstraintLayout>
