--- a/app/src/main/res/layout/content_tarifas.xml
+++ b/app/src/main/res/layout/content_tarifas.xml
@@ -24,7 +24,7 @@
         <ListView
             android:id="@+id/lv_tarifas"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"></ListView>
 
         </LinearLayout>
     </ScrollView>
