--- a/app/src/main/res/layout/activity_registrarse.xml
+++ b/app/src/main/res/layout/activity_registrarse.xml
@@ -9,12 +9,16 @@
 
     <android.support.v7.widget.Toolbar
         android:id="@+id/toolbar"
-        android:layout_width="match_parent"
+        style="@style/Toolbar_components"
+        android:layout_width="422dp"
         android:layout_height="?actionBarSize"
+        android:layout_marginEnd="8dp"
         android:background="@color/colorPrimary"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
         app:title="@string/registrarse"
-        app:titleTextColor="@color/buttonText"
-        style="@style/Toolbar_components" />
+        app:titleTextColor="@color/buttonText" />
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -28,29 +32,30 @@
             android:orientation="vertical">
 
 
-                                <!-- Cabecera SavEnergy -->
+            <!-- Cabecera SavEnergy -->
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="50dp"
                 android:orientation="vertical"
                 android:padding="15dp"
+                tools:ignore="MissingConstraints"
                 tools:layout_editor_absoluteX="8dp"
-                tools:layout_editor_absoluteY="5dp"
-                tools:ignore="MissingConstraints">
+                tools:layout_editor_absoluteY="5dp">
 
                 <ImageView
                     android:id="@+id/imageView2"
                     android:layout_width="101dp"
                     android:layout_height="95dp"
                     android:layout_gravity="center"
+                    android:contentDescription="TODO"
                     android:src="@drawable/logo"
-                    tools:layout_editor_absoluteX="110dp"
-                    tools:layout_editor_absoluteY="16dp"
                     tools:ignore="MissingConstraints"
-                    android:contentDescription="TODO" />
+                    tools:layout_editor_absoluteX="110dp"
+                    tools:layout_editor_absoluteY="16dp" />
             </LinearLayout>
 
-                                            <!-- Text Input layouts de Registro -->
+            <!-- Text Input layouts de Registro -->
             <!-- Nombre -->
             <android.support.design.widget.TextInputLayout
                 android:id="@+id/til_nombre"
@@ -60,11 +65,11 @@
                 android:hint="@string/nombre">
 
                 <android.support.design.widget.TextInputEditText
-                    android:id="@+id/et_nombre"
+                    android:id="@+id/et_clave"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    app:errorEnabled="true"
-                    android:inputType="textPersonName"/>
+                    android:inputType="textPersonName"
+                    app:errorEnabled="true" />
             </android.support.design.widget.TextInputLayout>
 
             <!-- Correo -->
@@ -129,5 +134,6 @@
         </LinearLayout>
 
     </ScrollView>
+
 
 </android.support.constraint.ConstraintLayout>
