--- a/app/src/main/res/layout/content_principal.xml
+++ b/app/src/main/res/layout/content_principal.xml
@@ -70,12 +70,11 @@
 
                 </LinearLayout>
 
-                <!--<com.github.mikephil.charting.charts.BarChart
+                <com.github.mikephil.charting.charts.BarChart
                     android:id="@+id/grafica"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"/>
-                    -->
             </LinearLayout>
             <LinearLayout
                 android:layout_width="match_parent"
