--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,5 @@
     <color name="colorPrimaryDark">#003300</color>
     <color name="colorAccent">#408c32</color>
     <color name="buttonText">#fff</color>
+    <color name="sustentable">#33cc33</color>
 </resources>
