--- a/app/src/main/res/layout/activity_configuracion_f_corte.xml
+++ b/app/src/main/res/layout/activity_configuracion_f_corte.xml
@@ -9,15 +9,15 @@
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:layout_editor_absoluteX="8dp"
-        tools:layout_editor_absoluteY="8dp"
-        tools:ignore="MissingConstraints">
+        tools:ignore="MissingConstraints"
+        tools:layout_editor_absoluteX="0dp"
+        tools:layout_editor_absoluteY="0dp">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:padding="8dp"
-            android:orientation="vertical" >
+            android:orientation="vertical"
+            android:padding="8dp">
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -38,32 +38,33 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="15dp"
-                android:padding="5dp"
-                android:orientation="vertical">
+                android:orientation="vertical"
+                android:padding="5dp">
 
                 <TextView
                     android:id="@+id/textView3"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:textSize="30sp"
+                    android:text="Por favor, configure el periodo de corte "
                     android:textAlignment="center"
-                    android:text="Por favor, configure el periodo de corte " />
+                    android:textSize="30sp" />
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="25dp"
-                    android:padding="5dp"
-                    android:orientation="vertical">
+                    android:orientation="vertical"
+                    android:padding="5dp">
 
                     <TextView
                         android:id="@+id/txt_f_facturacion"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:textColor="#000"
-                        android:layout_marginTop="15dp"
                         android:layout_marginBottom="10dp"
-                        android:text="Proxima fecha de Facturación" />
+                        android:layout_marginTop="15dp"
+                        android:text="Proxima fecha de Facturación"
+                        android:textColor="#000" />
+
                     <Spinner
                         android:id="@+id/sp_f_facturacion"
                         android:layout_width="match_parent"
@@ -73,22 +74,25 @@
                         android:id="@+id/txt_tarifa"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:textColor="#000"
-                        android:layout_marginTop="15dp"
                         android:layout_marginBottom="10dp"
-                        android:text="Tarifa" />
+                        android:layout_marginTop="15dp"
+                        android:text="Tarifa"
+                        android:textColor="#000" />
+
                     <Spinner
                         android:id="@+id/sp_tarifa"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content" />
+
                     <TextView
                         android:id="@+id/txt_cuota"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="15dp"
                         android:layout_marginBottom="10dp"
-                        android:textColor="#000"
-                        android:text="Cuota" />
+                        android:layout_marginTop="15dp"
+                        android:text="Cuota"
+                        android:textColor="#000" />
+
                     <Spinner
                         android:id="@+id/sp_cuota"
                         android:layout_width="match_parent"
@@ -103,8 +107,8 @@
                 android:id="@+id/b_finalizar"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="35dp"
                 android:layout_gravity="right"
+                android:layout_marginTop="35dp"
                 android:text="Finalizar" />
 
         </LinearLayout>
