Contador de caracteres

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
     <color name="colorAccent">#408c32</color>
     <color name="buttonText">#fff</color>
     <color name="sustentable">#33cc33</color>
+    <color name="electrica">#00bfff</color>
 </resources>
