--- a/app/src/main/res/layout/activity_registrarse.xml
+++ b/app/src/main/res/layout/activity_registrarse.xml
@@ -56,12 +56,14 @@
             </LinearLayout>
 
             <!-- Text Input layouts de Registro -->
-            <!-- Nombre -->
+            <!-- Clave del producto -->
             <android.support.design.widget.TextInputLayout
                 android:id="@+id/til_nombre"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
+                app:counterEnabled="true"
+                app:counterMaxLength="15">
                 android:hint="@string/nombre">
 
                 <android.support.design.widget.TextInputEditText
